Fix EmbedFallback screenshot size on mobile

--- a/components/ContentRenderer/components/EmbedFallback.module.scss
+++ b/components/ContentRenderer/components/EmbedFallback.module.scss
@@ -3,6 +3,10 @@
     margin: $spacing-4 0;
 }
 
+.image {
+    width: 100%;
+}
+
 .container {
     display: flex;
     flex-direction: column;
